# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [3.5.2] 2021-11-26

### Added

- Agora é possível alterar o layout de perfil, cartas da Menhera (Blackjack e o futuro Poker), o fundo destas e a cor da mesa das cartas
- Comando `/personalizar temas` para escolher os temas de sua conta
- Agora é possivel comprar `alguns` temas pela loja `/loja comprar temas`

### Changed

- Fetches desnecessários foram mudados para forge para fazer requests à API
- O BlackJack está de cara nova!

### Fixed

- Casais não davam 100% no ship

## [3.5.1] 2021-11-22

### Added

- Bots agora podem ter contas na Menhera! Para um bot ter uma conta, a Lux precisa fazê-lo manualmente, então caso queira um bot, só pedir pra ela. Os bots só podem ser mamados e receber presentes.
- **Censura**: Moderadores podem ativar a censura de palavrões, fazendo com que a Menhera não fale nenhum tipo de palavrão. Para ativar, use `/config censura`

### Changed

- As permissões necessárias para a Menhera funcionar foram revistas! Agora a Menhera só precisa ter permissão de MANAGE_WEBHOOKS (Somente para o comando /xandao) para funcionar!
- Os comandos de imagem agora ignoram nomes com caracteres tortos. Então caso tu queria mostrar teu nome normal, seja uma pessoa não do ente e use um username padrao, seu estranho.
- Os comandos `/humor` e `/fodase` foram movidos para dentro de `/meme`
- Os comandos `/cor` e `/sobremim` foram movidos para dentro de `/personalizar`
- Os comandos `idioma`, `blockcmd` e `blockcanal` foram movidos para dentro de `/config`
- O comando `/cooldown` foi repaginado, e adicionado tempo relativo para ajudar a saber o tempo exato do próximo reset
- O comando trisal foi levemente melhorado

### Fixed

- O idioma `inglês` voltou a funcionar